--- a/app/views/party/addresses/new.html.erb
+++ b/app/views/party/addresses/new.html.erb
@@ -1,4 +1,3 @@
-<!-- app/views/party/emails/new.html.erb -->
-<turbo-frame id="comm_modal_frame">
+<turbo-frame id="comm_modal_frame" class="addresses-modal">
   <%= render "form" %>
 </turbo-frame>
