--- a/app/views/party/groups/edit.html.erb
+++ b/app/views/party/groups/edit.html.erb
@@ -1,26 +1,25 @@
-<!-- app/views/party/groups/edit.html.erb -->
 <turbo-frame id="comm_modal_frame">
-  <dialog open class="modal modal-open">
-    <div class="modal-box w-[92vw] max-w-lg">
-      <h3 class="font-semibold mb-3">Rename group</h3>
+  <div class="modal-overlay">
+    <div class="modal-panel bg-base-100 shadow-xl">
+      <div class="p-6 space-y-4">
+        <h3 class="font-semibold">Rename household</h3>
 
-      <%= form_with model: @group,
-            scope: :party_group,
-            url: party_group_path(@group),
-            method: :patch,
-            data: { turbo_frame: "comm_modal_frame" } do |f| %>
+        <%= form_with model: @group,
+              url: party_group_path(@group),
+              method: :patch do |f| %>
 
-        <div class="form-control">
-          <%= f.label :name, "Name", class: "label" %>
-          <%= f.text_field :name, class: "input input-bordered w-full", required: true %>
-        </div>
+          <div class="flex flex-col gap-2">
+            <label class="label" for="group_name">Household name</label>
+            <%= f.text_field :name, id: "group_name",
+                  class: "input input-bordered w-full", autofocus: true %>
+          </div>
 
-        <div class="modal-action mt-6">
-          <button type="button" class="btn btn-ghost" data-action="click->modal#close">Cancel</button>
-          <%= f.submit "Save", class: "btn btn-primary" %>
-        </div>
-      <% end %>
+          <div class="mt-6 flex justify-end gap-2">
+            <button type="button" class="btn btn-ghost" data-action="click->modal#close">Cancel</button>
+            <%= f.submit "Save", class: "btn btn-primary", data: { disable_with: "Saving…" } %>
+          </div>
+        <% end %>
+      </div>
     </div>
-    <form method="dialog" class="modal-backdrop"><button aria-label="Close"></button></form>
-  </dialog>
+  </div>
 </turbo-frame>
