--- a/app/views/party/links/_list_by_type.html.erb
+++ b/app/views/party/links/_list_by_type.html.erb
@@ -1,12 +1,15 @@
+<!-- app/views/party/links/_list_by_type.html.erb -->
 <%# locals: party:, links:, editable: %>
-<% grouped = links.group_by(&:party_link_type_code) %>
-<% grouped.each do |code, rows| %>
-  <div class="mb-3">
-    <h3 class="text-sm opacity-70"><%= Ref::PartyLinkType.find(code).name %></h3>
-    <ul class="divide-y">
-      <%= render partial: "party/links/row",
-                 collection: rows, as: :link,
-                 locals: { viewer: party, editable: editable } %>
-    </ul>
-  </div>
+<% links.group_by(&:party_link_type_code).each do |code, group| %>
+  <% t = group.first.party_link_type %>
+
+  <% group.each do |link| %>
+    <% if t&.symmetric == 1 %>
+      <% next unless [link.source_party_id, link.target_party_id].min == party.id %>
+    <% else %>
+      <% next unless link.source_party_id == party.id %>
+    <% end %>
+
+    <%= render "party/links/row", link: link, party: party, editable: editable %>
+  <% end %>
 <% end %>
